[tool.poetry]
name = "test-task-bewise"
version = "0.1.0"
description = ""
authors = ["va1ker"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.25"
uvicorn = "^0.26.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
requests = "^2.31.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
